# squad-no-map

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY.md  buildspec.json
.github/workflows/: push.yaml
cmake/common/: buildspec_common.cmake
cmake/windows/: buildspec.cmake
data/locale/: en-US.ini
src/: plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/detection/: object_detection_worker.h
src/filters/: occluder_builtin.h  predictive_delay_filter.cpp  predictive_delay_filter.h
src/ocr/: ocr_worker.cpp  ocr_worker.h
tools/: img.py
